// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Choices Arrow controls 1`] = `
"? What git command you want to run?
  See current branch
▇ Checkout to master
  See status"
`;

exports[`Choices Arrow controls 2`] = `
"? What git command you want to run?
  See current branch
  Checkout to master
▇ See status"
`;

exports[`Choices Arrow controls 3`] = `
"? What git command you want to run?
  See current branch
  Checkout to master
▇ See status"
`;

exports[`Choices Arrow controls 4`] = `
"? What git command you want to run?
  See current branch
▇ Checkout to master
  See status"
`;

exports[`Choices Arrow controls 5`] = `
"? What git command you want to run?
▇ See current branch
  Checkout to master
  See status"
`;

exports[`Choices Arrow controls 6`] = `
"? What git command you want to run?
▇ See current branch
  Checkout to master
  See status"
`;

exports[`Choices Initial render 1`] = `
"? What git command you want to run?
▇ See current branch
  Checkout to master
  See status"
`;

exports[`Choices With numeric input enabled Selects correct item 1`] = `
"? What git command you want to run?
▇ 1. See current branch
  2. Checkout to master
  3. See status"
`;
